# SISE_ULTIMATE

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt  test_controller.py
app/: app.py
core/: controller.py  llm_summary.py
data/: sessions.csv
data/app/: requirements.txt  style.css
data/core/: controller.py  recorder.py
docs/: GUIDE.md
games/: racing_game.py  shooter_game.py
teste_clust/: clustering.ipynb  sessions_rows.csv
