[project]
name = "sise-ultimate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "matplotlib>=3.7.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
    "pygame>=2.5.0",
    "scikit-learn>=1.4.0",
    "streamlit>=1.32.0",
    "supabase>=2.28.0",
]
